# libnitroshareapi

./: CMakeLists.txt  README.md  nitroshareapi.pc.in
include/nitroshare/api/: client.h  export.h
src/: client.cpp  client_p.h
